--- a/config/database.yml
+++ b/config/database.yml
@@ -19,6 +19,10 @@ default: &default
 
 development:
   <<: *default
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
   database: protospace_39089_development
 
 # Warning: The database defined as "test" will be erased and
@@ -26,6 +30,10 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
   database: protospace_39089_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
@@ -49,6 +57,8 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
+  url: <%= ENV['DATABASE_URL'] %>
   database: protospace_39089_production
   username: protospace_39089
   password: <%= ENV['PROTOSPACE_39089_DATABASE_PASSWORD'] %>
